<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="web_service_url">https://itunes.apple.com/search</string>
    <string name="save">save</string>
    <string name="search_music">Type to search music</string>
    <string name="empty">No tracks found</string>
    <string name="track_title">Track title</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="rate_track">Rate track</string>
    <string name="web">Web</string>
    <string name="local">Local</string>

</resources>
