<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_value"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:inputType="text"
            android:hint="@string/search_music"
            android:singleLine="true"
            android:imeOptions="actionDone" >

            <requestFocus />
        </EditText>

         <LinearLayout
             android:id="@+id/button_layout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/searchEdit"
             android:layout_below="@+id/searchEdit"
             android:orientation="horizontal" >

             <Button
                 android:id="@+id/buttonWeb"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@drawable/gradient_bg_hover"
                 android:text="@string/web" />

             <Button
                 android:id="@+id/buttonLocal"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@drawable/gradient_bg"
                 android:text="@string/local" />

         </LinearLayout>
         
         <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_marginTop="10dp"
		    android:orientation="vertical"
		    android:layout_below="@+id/button_layout" >
        
	        <ListView
	            android:id="@+id/lstWebTracks"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:divider="@null"
	            android:dividerHeight="4dp"
	            android:visibility="gone"
	            android:listSelector="#00000000" />  
	         <ListView
	            android:id="@+id/lstLocalTracks"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:divider="@null"
	            android:dividerHeight="4dp"
	            android:visibility="gone"
	            android:listSelector="#00000000" />            
	        <!-- Here is the view to show if the list is emtpy -->
	        <TextView android:id="@+id/empty"
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content"
	            android:text="@string/empty"/>

		</LinearLayout>

    </RelativeLayout>
    
   

</LinearLayout>